--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     </header>
 
     <button>Get a cat name</button>
+
+    <button id="post">Do post request</button>
     
     <script src="main.js"></script>
 </body>
