--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-        <h1>Cats! Cats! Cats!</h1>
+        <h1>I Fought Two Lions in One</h1>
     </header>
 
-    <button>Get a cat name</button>
+    <button>Froggy Fresh</button>
 
-    <button id="post">Do post request</button>
+    <button>[REDACTED]</button>
     
     <script src="main.js"></script>
 </body>
